<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleExpense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_expense">Add Expense</string>
    <string name="generate_report">  Reports  </string>
    <string name="name">Name :</string>
    <string name="date">Date :</string>
    <string name="amount">Amount :</string>
    <string name="details">Details :</string>
    <string name="method">Method :</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="check">Check</string>
    <string name="spending">SPENDING</string>
    <string name="income">INCOME</string>
    <string name="exp_type">ExpType</string>
    <string name="submit">Add Expense</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="example_walmart">Example: Walmart</string>
    <string name="example_milk_bread_etc_">Example: Milk, Bread, etc.</string>
    <string name="currency">Currency</string>
    <string name="passcode">Passcode</string>
    <string name="passcode_length">4 Digit Passcode</string>
    <string name="delete_all_expenses">Delete All Expenses</string>
    <string name="method_tv">"Method: "</string>

</resources>
