<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="horizontal|vertical"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <ScrollView
                        android:id="@+id/scrollViewMain"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:scrollbarStyle="outsideOverlay" >

                        <LinearLayout
                            android:id="@+id/LinearLayout1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" >

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentBottom="false"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentRight="false"
                                    android:layout_alignParentTop="false"
                                    android:layout_alignWithParentIfMissing="true"
                                    android:layout_centerHorizontal="false"
                                    android:layout_centerInParent="false"
                                    android:layout_centerVertical="true"
                                    android:layout_marginTop="2dp"
                                    android:layout_weight="1"
                                    android:text="@string/name"
                                    android:textColor="#FFFFFF"
                                    android:textSize="22sp" />

                                <AutoCompleteTextView
                                    android:id="@+id/name_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentTop="true"
                                    android:layout_toRightOf="@+id/textView2"
                                    android:ems="10"
                                    android:hint="@string/example_walmart"
                                    android:inputType="text|textAutoComplete"
                                    android:maxLines="1"
                                    android:textSize="18sp" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical" >

                                <EditText
                                    android:id="@+id/amt_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="20dp"
                                    android:layout_toRightOf="@+id/textView4"
                                    android:ems="10"
                                    android:inputType="numberDecimal"
                                    android:width="100dp" />

                                <ToggleButton
                                    android:id="@+id/toggleButton1"
                                    android:layout_width="45dp"
                                    android:layout_height="45dp"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="30dp"
                                    android:layout_toRightOf="@+id/amt_tv"
                                    android:background="@drawable/toggle_spending"
                                    android:text="@string/togglebutton" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/amount"
                                    android:textColor="#FFFFFF"
                                    android:textSize="15sp" />

                            </RelativeLayout>

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:text="@string/date"
                                android:textColor="#FFFFFF"
                                android:textSize="15sp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" >

                                <DatePicker
                                    android:id="@+id/datePicker1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentTop="true" />

                            </RelativeLayout>

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:text="@string/details"
                                android:textColor="#FFFFFF"
                                android:textSize="15sp" />

                            <AutoCompleteTextView
                                android:id="@+id/details_tv"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/example_milk_bread_etc_"
                                android:maxLines="2" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:text="@string/method"
                                android:textColor="#FFFFFF"
                                android:textSize="15sp" />

                            <RadioGroup
                                android:id="@+id/method_radio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:layout_weight="1"
                                android:orientation="horizontal" >

                                <RadioButton
                                    android:id="@+id/radio0"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:checked="true"
                                    android:text="@string/card" />

                                <RadioButton
                                    android:id="@+id/radio1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:text="@string/cash" />

                                <RadioButton
                                    android:id="@+id/radio2"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_weight="1"
                                    android:text="@string/check" />
                            </RadioGroup>

                            <Button
                                android:id="@+id/submit_btn"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/gray_btn"
                                android:text="@string/submit"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/textView1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Spent :"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/spentAmt_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_toRightOf="@+id/textView1"
                                android:text="$99999"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/earnedAmt_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:text="$99999"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_toLeftOf="@+id/earnedAmt_tv"
                                android:text="Earned :"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </RelativeLayout>

                        <ExpandableListView
                            android:id="@+id/expandableExpView"
                            android:layout_width="0dp"
                            android:layout_height="0dp" >
                        </ExpandableListView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TableLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" >

                        <TableRow
                            android:id="@+id/tableRow2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/currency_tv"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1"
                                android:text="@string/currency"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <Spinner
                                android:id="@+id/currency_spinner1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:entries="@array/currency" />
                        </TableRow>

                        <TableRow
                            android:id="@+id/tableRow1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" >

                            <Button
                                android:id="@+id/delete_all"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/delete_all_expenses" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>